<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/instru_es"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="8dp"
                android:text="@string/instrucoes"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/v2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v1"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:text="@string/dificuldade"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/dificult_easy"
                    android:textColor="@color/primaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/dificult_intermedio_info"
                    android:textColor="@color/primaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/dificult_hard_info"
                    android:textColor="@color/primaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="@string/good_look"
                    android:textColor="@color/primaryText" />

            </RadioGroup>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>