<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:text="@string/dificuldade"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rg_dificult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/v1"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dificult_facil" />

        <RadioButton
            android:id="@+id/rb_medium"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dificult_intermedio" />

        <RadioButton
            android:id="@+id/rb_hard"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dificult_dificil" />

    </RadioGroup>

    <TextView
        android:paddingTop="16dp"
        android:id="@+id/tv_info"
        android:layout_below="@id/rg_dificult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>